Readme file updated

--- a/requirements.txt
+++ b/requirements.txt
@@ -22,3 +22,10 @@ SQLAlchemy==2.0.30
 typing_extensions==4.12.2
 Werkzeug==3.0.3
 WTForms==3.1.2
+certifi==2024.6.2
+charset-normalizer==3.3.2
+Flask-Mail==0.10.0
+haversine==2.8.1
+itsdangerous==2.0.1
+requests==2.32.3
+urllib3==2.2.2
