--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,6 +20,7 @@ jobs:
 
       - name: Install dependencies
         run: |
+          pip install --upgrade pip
           python -m venv venv
           source venv/bin/activate
           pip install -r requirements.txt
